--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest":true
     },
     "extends": ["eslint:recommended","prettier"],
     "overrides": [
@@ -10,22 +11,5 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     }
-    // "rules": {
-    //     "indent": [
-    //         "error",
-    //         "tab"
-    //     ],
-    //     "linebreak-style": [
-    //         "error",
-    //         "unix"
-    //     ],
-    //     "quotes": [
-    //         "error",
-    //         "double"
-    //     ],
-    //     "semi": [
-    //         "error",
-    //         "always"
-    //     ]
-    // }
+    
 }
